# lcp

./: ANPR.ipynb  ANPR2.ipynb  CMakeLists.txt  license_plate_detection.py  main.py  requirements.txt
src/: main.cpp
